--- a/Server/devops/env.yml
+++ b/Server/devops/env.yml
@@ -4,6 +4,9 @@ dev:
   environment: ${ssm:/${self:custom.environment}/environment}
   db_name: ${ssm:/${self:custom.environment}/db_name}
   jwt_secret: ${ssm:/auth/${self:custom.environment}/jwt_secret}
+  HumanDistributorSecret: ${ssm:/${self:custom.environment}/HumanDistributorSecret}
+  StellarUrl: ${ssm:/${self:custom.environment}/StellarUrl}
+
 
 prod:
   DB_URI: ${ssm:/${self:custom.environment}/DB_URI}
@@ -11,4 +14,3 @@ prod:
   environment: ${ssm:/${self:custom.environment}/environment}
   db_name: ${ssm:/${self:custom.environment}/db_name}
   jwt_secret: ${ssm:/auth/${self:custom.environment}/jwt_secret}
-
